--- a/apex.css
+++ b/apex.css
@@ -30,3 +30,21 @@ margin: 4px 2px;
 cursor: pointer;
 }
 html {font-family: Arial}
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #171717;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5865f2;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #5865f2;
+}
