--- a/apex.css
+++ b/apex.css
@@ -50,3 +50,21 @@ font-family: Arial;
 ::-webkit-scrollbar-thumb:hover {
   background: #5865f2;
 }
+webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+webkit-scrollbar-track {
+  background: #171717;
+}
+
+/* Handle */
+webkit-scrollbar-thumb {
+  background: #5865f2;
+}
+
+/* Handle on hover */
+webkit-scrollbar-thumb:hover {
+  background: #5865f2;
+}
