--- a/docs/docs.css
+++ b/docs/docs.css
@@ -4,7 +4,7 @@
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: transparent;
+    background: #171717;
   }
   
   /* Handle */
@@ -22,7 +22,7 @@
   
   /* Track */
   webkit-scrollbar-track {
-    background: transparent;
+    background: #171717;
   }
   
   /* Handle */
