--- a/apex.scss
+++ b/apex.scss
@@ -1,48 +1,37 @@
 header {
   display: none;
 }
-
-body {
-  background-color: rgb(1, 2, 3);
-  color: white;
-}
-
+body {background-color:rgb(1, 2, 3);color:white}
 a:link {
-  color: rgb(255, 204, 0);
-  text-decoration: none;
+color:rgb(255, 204, 0);
+text-decoration: none;
 }
-
 a:visited {
-  color: rgb(204, 112, 0);
-  text-decoration: none;
+color:rgb(204, 112, 0);
+text-decoration: none;
 }
-
 a:hover {
-  color: rgb(255, 204, 0);
+color:rgb(255, 204, 0);
 }
-
 a:active {
-  color: rgb(204, 112, 0);
+color:rgb(204, 112, 0);
 }
-
 button {
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: rgb(88, 101, 242);
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+border: 1px solid black;
+border-radius: 10px;
+background-color: rgb(88, 101, 242);
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
 }
-
 html {
-  font-family: Arial;
+font-family: Arial;
 }
-
 ::-webkit-scrollbar {
   width: 5px;
 }
@@ -61,7 +50,6 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #5865f2;
 }
-
 webkit-scrollbar {
   width: 5px;
 }
@@ -80,5 +68,3 @@ webkit-scrollbar-thumb {
 webkit-scrollbar-thumb:hover {
   background: #5865f2;
 }
-
-/*# sourceMappingURL=apex.css.map */
